bugfix updateCard swagger
